{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 859,
  "lineage": "72a84032-84b7-7e67-ac15-182cdd55e8a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ilab_eip_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063b6b0d2a216cf22",
            "domain": "vpc",
            "id": "eipalloc-063b6b0d2a216cf22",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-200-135-245.us-west-2.compute.amazonaws.com",
            "public_ip": "54.200.135.245",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ilab_ngw_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045f4f978b33a7070",
            "domain": "vpc",
            "id": "eipalloc-045f4f978b33a7070",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-100-21-79-194.us-west-2.compute.amazonaws.com",
            "public_ip": "100.21.79.194",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ilab_bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005414fb846dc12d1",
            "arn": "arn:aws:ec2:us-west-2:993276023740:instance/i-0e9efe6dce15bc983",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e9efe6dce15bc983",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "imagine-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-063a910d42810bd97",
            "private_dns": "ip-10-0-200-245.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.200.245",
            "public_dns": "ec2-54-201-40-183.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.40.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-093d0f53f73739734",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be82e544d65c1e02",
            "tags": {
              "Name": "ilab bastion host"
            },
            "tags_all": {
              "Name": "ilab bastion host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0412494a68d1fbb00"
            ]
          },
          "dependencies": [
            "aws_key_pair.imaginelb_auth",
            "aws_security_group.albonly",
            "aws_subnet.ilab_subnet_pub_a",
            "aws_vpc.imaginelabtf",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ilab_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993276023740:internet-gateway/igw-0008b589d3040b371",
            "id": "igw-0008b589d3040b371",
            "owner_id": "993276023740",
            "tags": {
              "Name": "ilab_igw"
            },
            "tags_all": {
              "Name": "ilab_igw"
            },
            "vpc_id": "vpc-06a1dc6028c2f561f"
          },
          "dependencies": [
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ilab_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993276023740:loadbalancer/app/ilab-lb/267f4c22a868b981",
            "arn_suffix": "app/ilab-lb/267f4c22a868b981",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ilab-lb-2029036394.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:993276023740:loadbalancer/app/ilab-lb/267f4c22a868b981",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ilab-lb",
            "security_groups": [
              "sg-0412494a68d1fbb00"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036521fb4daa64d91"
              },
              {
                "subnet_id": "subnet-0be82e544d65c1e02"
              }
            ],
            "subnets": [
              "subnet-036521fb4daa64d91",
              "subnet-0be82e544d65c1e02"
            ],
            "tags": {
              "name": "ilab-AppLoadBalancer"
            },
            "tags_all": {
              "name": "ilab-AppLoadBalancer"
            },
            "vpc_id": "vpc-06a1dc6028c2f561f",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.albonly",
            "aws_subnet.ilab_subnet_pub_a",
            "aws_subnet.ilab_subnet_pub_b",
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ilab_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993276023740:listener/app/ilab-lb/267f4c22a868b981/f81187c67e7147dc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:993276023740:targetgroup/ilab-app-loadbalancer/bd8686f1672923d6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993276023740:listener/app/ilab-lb/267f4c22a868b981/f81187c67e7147dc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:993276023740:loadbalancer/app/ilab-lb/267f4c22a868b981",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ilab_lb",
            "aws_lb_target_group.ilab_alb",
            "aws_security_group.albonly",
            "aws_subnet.ilab_subnet_pub_a",
            "aws_subnet.ilab_subnet_pub_b",
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ilab_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:993276023740:targetgroup/ilab-app-loadbalancer/bd8686f1672923d6",
            "arn_suffix": "targetgroup/ilab-app-loadbalancer/bd8686f1672923d6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:993276023740:targetgroup/ilab-app-loadbalancer/bd8686f1672923d6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ilab-app-loadbalancer",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06a1dc6028c2f561f"
          },
          "dependencies": [
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ilab_ngw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063b6b0d2a216cf22",
            "connectivity_type": "public",
            "id": "nat-07bf48c9e092d2798",
            "network_interface_id": "eni-0a281fe4ed3a98ed3",
            "private_ip": "10.0.200.61",
            "public_ip": "54.200.135.245",
            "subnet_id": "subnet-0be82e544d65c1e02"
          },
          "dependencies": [
            "aws_eip.ilab_eip_natgw1",
            "aws_subnet.ilab_subnet_pub_a",
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ilab_ngw_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-045f4f978b33a7070",
            "connectivity_type": "public",
            "id": "nat-01de2bb730e36d40b",
            "network_interface_id": "eni-03fde19ad43567439",
            "private_ip": "10.0.222.61",
            "public_ip": "100.21.79.194",
            "subnet_id": "subnet-036521fb4daa64d91"
          },
          "dependencies": [
            "aws_eip.ilab_ngw_b",
            "aws_subnet.ilab_subnet_pub_b",
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ilab_prv_subneta_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993276023740:route-table/rtb-0b15d44793e586a1e",
            "id": "rtb-0b15d44793e586a1e",
            "owner_id": "993276023740",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07bf48c9e092d2798",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ilab private subnet a route table"
            },
            "tags_all": {
              "Name": "ilab private subnet a route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a1dc6028c2f561f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ilab_eip_natgw1",
            "aws_nat_gateway.ilab_ngw_a",
            "aws_subnet.ilab_subnet_pub_a",
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ilab_prv_subnetb_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993276023740:route-table/rtb-09895e3f085d29105",
            "id": "rtb-09895e3f085d29105",
            "owner_id": "993276023740",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01de2bb730e36d40b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ilab private subnet b route table"
            },
            "tags_all": {
              "Name": "ilab private subnet b route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a1dc6028c2f561f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ilab_ngw_b",
            "aws_nat_gateway.ilab_ngw_b",
            "aws_subnet.ilab_subnet_pub_b",
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ilab_pub_route_table_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993276023740:route-table/rtb-0132e1c5f05eab85a",
            "id": "rtb-0132e1c5f05eab85a",
            "owner_id": "993276023740",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0008b589d3040b371",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ilab public subnet route table a"
            },
            "tags_all": {
              "Name": "ilab public subnet route table a"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a1dc6028c2f561f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ilab_igw",
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ilab_pub_route_table_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993276023740:route-table/rtb-0ed34ed841e081755",
            "id": "rtb-0ed34ed841e081755",
            "owner_id": "993276023740",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0008b589d3040b371",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ilab public subnet route table b"
            },
            "tags_all": {
              "Name": "ilab public subnet route table b"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a1dc6028c2f561f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ilab_igw",
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ilab_pri_sub_to_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086624347cdad95af",
            "route_table_id": "rtb-0b15d44793e586a1e",
            "subnet_id": "subnet-048fa149a2ce087cd"
          },
          "dependencies": [
            "aws_eip.ilab_eip_natgw1",
            "aws_nat_gateway.ilab_ngw_a",
            "aws_route_table.ilab_prv_subneta_rt",
            "aws_subnet.ilab_subnet_priv_a",
            "aws_subnet.ilab_subnet_pub_a",
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "imaginelab_rt_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb9fb47abd7245e0",
            "route_table_id": "rtb-0132e1c5f05eab85a",
            "subnet_id": "subnet-0be82e544d65c1e02"
          },
          "dependencies": [
            "aws_internet_gateway.ilab_igw",
            "aws_route_table.ilab_pub_route_table_a",
            "aws_subnet.ilab_subnet_pub_a",
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "imaginelab_rt_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039ae0a9389b70674",
            "route_table_id": "rtb-0ed34ed841e081755",
            "subnet_id": "subnet-036521fb4daa64d91"
          },
          "dependencies": [
            "aws_internet_gateway.ilab_igw",
            "aws_route_table.ilab_pub_route_table_b",
            "aws_subnet.ilab_subnet_pub_b",
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "albonly",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993276023740:security-group/sg-0412494a68d1fbb00",
            "description": "Allow http/ssh inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0412494a68d1fbb00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_from_alb_only",
            "name_prefix": "",
            "owner_id": "993276023740",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a1dc6028c2f561f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993276023740:security-group/sg-0a2fc621df7b3533d",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2fc621df7b3533d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0412494a68d1fbb00"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0412494a68d1fbb00"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "993276023740",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a1dc6028c2f561f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.albonly",
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993276023740:security-group/sg-0735810fccfe85a5f",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0735810fccfe85a5f",
            "ingress": [],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "993276023740",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a1dc6028c2f561f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ilab_subnet_priv_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993276023740:subnet/subnet-048fa149a2ce087cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.220.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048fa149a2ce087cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "993276023740",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "ilab_private"
            },
            "tags_all": {
              "name": "ilab_private"
            },
            "vpc_id": "vpc-06a1dc6028c2f561f"
          },
          "dependencies": [
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ilab_subnet_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993276023740:subnet/subnet-0d15496cb2786321a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.224.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d15496cb2786321a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "993276023740",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "ilab_private_b"
            },
            "tags_all": {
              "name": "ilab_private_b"
            },
            "vpc_id": "vpc-06a1dc6028c2f561f"
          },
          "dependencies": [
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ilab_subnet_pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993276023740:subnet/subnet-0be82e544d65c1e02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be82e544d65c1e02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "993276023740",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "ilab_public_a"
            },
            "tags_all": {
              "name": "ilab_public_a"
            },
            "vpc_id": "vpc-06a1dc6028c2f561f"
          },
          "dependencies": [
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ilab_subnet_pub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993276023740:subnet/subnet-036521fb4daa64d91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.222.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036521fb4daa64d91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "993276023740",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "ilab_public_b"
            },
            "tags_all": {
              "name": "ilab_public_b"
            },
            "vpc_id": "vpc-06a1dc6028c2f561f"
          },
          "dependencies": [
            "aws_vpc.imaginelabtf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "imaginelabtf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:993276023740:vpc/vpc-06a1dc6028c2f561f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00e9d4a416584056e",
            "default_route_table_id": "rtb-001f7c991c5244f28",
            "default_security_group_id": "sg-0931cfbe6e4429bb0",
            "dhcp_options_id": "dopt-00b816338b54acb14",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06a1dc6028c2f561f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001f7c991c5244f28",
            "owner_id": "993276023740",
            "tags": {
              "Name": "devtest"
            },
            "tags_all": {
              "Name": "devtest"
            }
          }
        }
      ]
    }
  ]
}